# SimpleInterpreter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
SimpleInterpreter/: SimpleInterpreter.sln  SimpleInterpreter.vcxproj  SimpleInterpreter.vcxproj.filters  cpp.hint  test.cpp
SimpleInterpreter/Headers/ASTNodes/: AbstractSyntaxTreeNodeBase.h  AssignNode.h  BinOpNode.h  BlockNode.h  CompoundNode.h  NoOpNode.h  NumNode.h  ProcedureDeclNode.h  ProgramNode.h  TypeNode.h  UnaryOpNode.h  VarDeclNode.h  VarNode.h
SimpleInterpreter/Headers/Basics/: OutputStreamTarget.h
SimpleInterpreter/Headers/NodeVisitor/: Interpreter.h  InterpreterException.h  NodeVisitor.h  SemanticAnalyzer.h  SimpleVisitor.h  SymbolTableBuilder.h
SimpleInterpreter/Headers/Parser/: ASTException.h  ASTParser.h
SimpleInterpreter/Headers/Symbol/: BuiltinTypeSymbol.h  ScopedSymbolTable.h  Symbol.h  SymbolTable.h  VarSymbol.h
SimpleInterpreter/Headers/Tokenizer/: Lexer.h  LexerException.h  Token.h
SimpleInterpreter/Sources/ASTNodes/: AbstractSyntaxTreeNodeBase.cpp  AssignNode.cpp  BinOpNode.cpp  BlockNode.cpp  CompoundNode.cpp  NumNode.cpp  ProcedureDeclNode.cpp  ProgramNode.cpp  TypeNode.cpp  UnaryOpNode.cpp  VarDeclNode.cpp  VarNode.cpp
SimpleInterpreter/Sources/NodeVisitor/: Interpreter.cpp  InterpreterException.cpp  NodeVisitor.cpp  SemanticAnalyzer.cpp  SimpleVisitor.cpp  SymbolTableBuilder.cpp
SimpleInterpreter/Sources/Parser/: ASTException.cpp  ASTParser.cpp
SimpleInterpreter/Sources/Symbol/: BuiltinTypeSymbol.cpp  ScopedSymbolTable.cpp  Symbol.cpp  SymbolTable.cpp  (+1 more)
(+3 files in other folders)
